Attempting to fix the spacing between field and inputs on mobile devices, fixing DT-1527

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1380,7 +1380,7 @@ footer.bk-footer .widget.profile .bk-profile-socialicons span a {
                 -webkit-border-radius: 4px;
                 -moz-border-radius: 4px;
                 border-radius: 4px;
-                @media @mobile {
+                @media @tablet {
                     width: 100%;
                     margin-bottom: 10px;
                 }
